--- a/404.html
+++ b/404.html
@@ -7,16 +7,16 @@
 
   <meta name="theme-color" content="#1b79ea"/>
 
-  <link rel="manifest" href="/public/manifest.json">
-  <link rel="apple-touch-icon" sizes="152x152" href="/public/images/favicon/apple-icon-152x152.png"/>
-  <link rel="icon" type="image/png" sizes="192x192"  href="/public/images/favicon/android-icon-144x144.png"/>
-  <link rel="icon" type="image/png" sizes="32x32" href="/public/images/favicon/favicon-32x32.png"/>
-  <link rel="icon" type="image/png" sizes="16x16" href="/public/images/favicon/favicon-16x16.png"/>
-  <link rel="icon" type="image/x-icon" href="/public/images/favicon/favicon.ico">
+  <link rel="manifest" href="public/manifest.json">
+  <link rel="apple-touch-icon" sizes="152x152" href="public/images/favicon/apple-icon-152x152.png"/>
+  <link rel="icon" type="image/png" sizes="192x192"  href="public/images/favicon/android-icon-144x144.png"/>
+  <link rel="icon" type="image/png" sizes="32x32" href="public/images/favicon/favicon-32x32.png"/>
+  <link rel="icon" type="image/png" sizes="16x16" href="public/images/favicon/favicon-16x16.png"/>
+  <link rel="icon" type="image/x-icon" href="public/images/favicon/favicon.ico">
 
   <link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Work+Sans:400,700" />
 
-  <link rel="stylesheet" href="/public/stylesheets/error.css" />
+  <link rel="stylesheet" href="public/stylesheets/error.css" />
 </head>
 <body>
   <div class="error">
